<resources>
    <string name="app_name">CyberNexus</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sed nisi iaculis, ullamcorper risus in, egestas ante. Integer a urna eu nisi scelerisque cursus quis a libero. Maecenas congue eros sit amet sem accumsan luctus. Maecenas iaculis nisl ut facilisis consequat. Donec pulvinar ultricies interdum. Suspendisse in eros ipsum. Vestibulum vitae justo rutrum nisl blandit vestibulum sit amet sit amet mi. Morbi lobortis convallis lacus, eu imperdiet ante ultrices sed. In nec sodales mi. Nulla vitae est aliquam, tempor tortor vel, volutpat turpis. Etiam vitae mauris ex.</string>
    <string name="password">Password</string>
    <string name="next">Next</string>
    <string name="signup_long">Don\'t have an account? Sign up.</string>
    <string name="signup_socials">Or login with social account</string>
    <string name="login">Do you have an account? Login</string>
    <string name="mail_error">Not a valid email address. Should be your@email.com></string>
    <string name="sign_in">Sign In</string>
    <string name="signup">Sign Up</string>
    <string name="cart">Cart</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="email">Email</string>
    <string name="flash_sale">Flash Sale</string>
    <string name="welcome">Welcome to CyberNexus</string>
    <string name="category">Enhanfdfdfcements</string>
    <string name="check_out">Check Out</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="product_name">Product Name</string>
    <string name="products">Products</string>
    <string name="company">Company Name</string>
    <string name="price">0.00$</string>
    <string name="sale">FLASH PRICE: </string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_amount">Total Amount:</string>
    <string name="payment">Payment</string>
    <string name="name_surname">Name Surname</string>
    <string name="card_num">Card Number</string>
    <string name="expire_month">Expire Month</string>
    <string name="expire_year">Expire Year</string>
    <string name="cvv">CVV</string>
    <string name="order">Submit Order</string>
    <string name="payment_success_text">Your order will be delivered soon.\n Thank you for choosing our app!</string>
    <string name="success">Payment Successful!</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="card_num_placeholder">1234567812345678</string>
</resources>