<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="50sp"
    android:padding="10sp"
    tools:context=".ui.payment.PaymentFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_payment_title"
        style="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/payment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30sp"
        android:hint="@string/name_surname"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_card_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:hint="@string/card_num"
        app:layout_constraintTop_toBottomOf="@+id/til_name_card">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_card_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_expire_month"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:hint="@string/expire_month"
        app:layout_constraintTop_toBottomOf="@+id/til_card_num">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_expire_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_expire_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:hint="@string/expire_year"
        app:layout_constraintTop_toBottomOf="@+id/til_expire_month">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_expire_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_cvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10sp"
        android:hint="@string/cvv"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/til_expire_year">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>